new helper added for both encryption and decryption

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "autoload": {
         "files": [
-            "app/Http/Helpers/Decryption.php"
+            "app/Http/Helpers/Crypt.php"
+
         ],
         "psr-4": {
             "App\\": "app/",
